# rag-studio-pro

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  package.json
apps/backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/app/: __init__.py  main.py
apps/backend/app/agent/: graph.py  tools.py
apps/backend/app/api/: deps.py
apps/backend/app/core/: config.py  metrics.py  permissions.py  ratelimit.py  security.py
apps/backend/app/db/: base.py  session.py  sync_session.py
apps/backend/app/ingestion/: parsers.py
apps/backend/app/integrations/: clerk.py  llm.py  storage.py
apps/backend/app/models/: __init__.py  audit_log.py  chat_session.py  chunk.py  document.py  evaluation_run.py  ingestion_job.py  knowledge_base.py  message.py  mixins.py  organization.py  role.py  user.py  workspace.py
apps/backend/app/rag/: chunking.py  embeddings.py  generation.py  graph_extraction.py  graph_retrieval.py  graph_store.py  hybrid.py  retrieval.py  vector_store.py
apps/backend/app/schemas/: admin.py  agent.py  auth.py  chat.py  common.py  graph.py  knowledge_base.py  organization.py  query.py  studio.py
apps/backend/app/services/: audit_service.py  chat_service.py  document_service.py  evaluation_service.py  knowledge_base_service.py  organization_service.py  user_service.py  workspace_service.py
apps/backend/app/worker/: celery_app.py
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 0001_initial_schema.py  0002_seed_roles.py  (+5 more)
apps/backend/tests/: test_health.py
(+71 files in other folders)
