[project]
name = "rag-studio-pro-backend"
version = "0.1.0"
description = "RAG Studio Pro — FastAPI backend"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "pyjwt[crypto]>=2.10.0",
    "httpx>=0.27.0",
    "boto3>=1.35.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "pandas>=2.2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "python-multipart>=0.0.12",
    "fastembed>=0.4.2",
    "qdrant-client>=1.12.0",
    "langchain-text-splitters>=0.3.4",
    "tiktoken>=0.8.0",
    "neo4j>=5.27.0",
    "langgraph>=0.2.60",
    "ddgs>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "httpx>=0.27.0",
    "pytest>=8.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.uv]
package = false
